; ModuleID = '/home/carl/AnghaBench/linux/tools/perf/util/extr_dwarf-aux.c___die_find_member_cb.c'
source_filename = "/home/carl/AnghaBench/linux/tools/perf/util/extr_dwarf-aux.c___die_find_member_cb.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@DW_TAG_member = common dso_local global i64 0, align 8
@DIE_FIND_CB_END = common dso_local global i32 0, align 4
@DIE_FIND_CB_SIBLING = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i8*)* @__die_find_member_cb to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @__die_find_member_cb(i32* %0, i8* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  store i32* %0, i32** %4, align 8
  store i8* %1, i8** %5, align 8
  %9 = load i8*, i8** %5, align 8
  store i8* %9, i8** %6, align 8
  %10 = load i32*, i32** %4, align 8
  %11 = call i64 @dwarf_tag(i32* %10)
  %12 = load i64, i64* @DW_TAG_member, align 8
  %13 = icmp eq i64 %11, %12
  br i1 %13, label %14, label %38

14:                                               ; preds = %2
  %15 = load i32*, i32** %4, align 8
  %16 = load i8*, i8** %6, align 8
  %17 = call i64 @die_compare_name(i32* %15, i8* %16)
  %18 = icmp ne i64 %17, 0
  br i1 %18, label %19, label %21

19:                                               ; preds = %14
  %20 = load i32, i32* @DIE_FIND_CB_END, align 4
  store i32 %20, i32* %3, align 4
  br label %40

21:                                               ; preds = %14
  %22 = load i32*, i32** %4, align 8
  %23 = call i32 @dwarf_diename(i32* %22)
  %24 = icmp ne i32 %23, 0
  br i1 %24, label %36, label %25

25:                                               ; preds = %21
  %26 = load i32*, i32** %4, align 8
  %27 = call i64 @die_get_type(i32* %26, i32* %7)
  %28 = icmp ne i64 %27, 0
  br i1 %28, label %29, label %35

29:                                               ; preds = %25
  %30 = load i8*, i8** %6, align 8
  %31 = call i64 @die_find_member(i32* %7, i8* %30, i32* %8)
  %32 = icmp ne i64 %31, 0
  br i1 %32, label %33, label %35

33:                                               ; preds = %29
  %34 = load i32, i32* @DIE_FIND_CB_END, align 4
  store i32 %34, i32* %3, align 4
  br label %40

35:                                               ; preds = %29, %25
  br label %36

36:                                               ; preds = %35, %21
  br label %37

37:                                               ; preds = %36
  br label %38

38:                                               ; preds = %37, %2
  %39 = load i32, i32* @DIE_FIND_CB_SIBLING, align 4
  store i32 %39, i32* %3, align 4
  br label %40

40:                                               ; preds = %38, %33, %19
  %41 = load i32, i32* %3, align 4
  ret i32 %41
}

declare dso_local i64 @dwarf_tag(i32*) #1

declare dso_local i64 @die_compare_name(i32*, i8*) #1

declare dso_local i32 @dwarf_diename(i32*) #1

declare dso_local i64 @die_get_type(i32*, i32*) #1

declare dso_local i64 @die_find_member(i32*, i8*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
